--- a/Tretix.vcxproj
+++ b/Tretix.vcxproj
@@ -119,6 +119,7 @@
     <ClCompile Include="Globals.h" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModuleBlocs.cpp" />
+    <ClCompile Include="ModuleBackground.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleBlocs.h" />
+    <ClInclude Include="ModuleBackground.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleWindow.h" />
