--- a/Tretix.vcxproj
+++ b/Tretix.vcxproj
@@ -118,18 +118,22 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Globals.h" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ModuleBasicBloc.cpp" />
     <ClCompile Include="ModuleBlocs.cpp" />
     <ClCompile Include="ModuleBackground.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
+    <ClCompile Include="ModulePlayer.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="ModuleBasicBloc.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleBlocs.h" />
     <ClInclude Include="ModuleBackground.h" />
     <ClInclude Include="ModuleInput.h" />
+    <ClInclude Include="ModulePlayer.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleWindow.h" />
   </ItemGroup>
