--- a/Tretix.vcxproj.filters
+++ b/Tretix.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClCompile Include="ModuleBackground.cpp">
       <Filter>Moduls</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleBasicBloc.cpp">
+      <Filter>Moduls</Filter>
+    </ClCompile>
+    <ClCompile Include="ModulePlayer.cpp">
+      <Filter>Moduls</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -59,6 +65,12 @@
       <Filter>Moduls</Filter>
     </ClInclude>
     <ClInclude Include="ModuleBackground.h">
+      <Filter>Moduls</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleBasicBloc.h">
+      <Filter>Moduls</Filter>
+    </ClInclude>
+    <ClInclude Include="ModulePlayer.h">
       <Filter>Moduls</Filter>
     </ClInclude>
   </ItemGroup>
