--- a/Tretix.vcxproj.filters
+++ b/Tretix.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="ModuleStructBloc.cpp">
       <Filter>Moduls</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleFonts.cpp">
+      <Filter>Moduls</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -83,6 +86,9 @@
       <Filter>Moduls</Filter>
     </ClInclude>
     <ClInclude Include="ModuleStructBlocs.h">
+      <Filter>Moduls</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleFonts.h">
       <Filter>Moduls</Filter>
     </ClInclude>
   </ItemGroup>
